# JAX-AMG

./: .env  .gitignore  .pre-commit-config.yaml  CITATION.cff  INSTALL.md  MANIFEST.in  README.md  environment-mpi.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-mpi.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
demo/: block_matrix_solve.py  convection_diffusion_problem.py  jax_sparse_solver_comparison.py  large_3d_poisson_problem.py  large_3d_poisson_problem_optimization.py  large_random_matrix.py  linear_operator.py  mpi_autodiff.py  mpi_large_3d_poisson_operator_optimization.py  mpi_large_random_matrix.py  mpi_nonsymmetric_matrix_autodiff.py  mpi_nonsysmmetric_matrix_autodiff.py  mpi_optimization.py  mpi_poisson_operator_optimization.py  mpi_poisson_operator_optimization_global.py  mpi_poisson_problem.py  mpi_poisson_problem_auto_partition.py  mpi_preconditioned_solver.py  mpi_solver_cache_benchmark.py  mpi_sparsity_detection_benchmark.py  mpi_tridiagonal_matrix_optimization.py  nonsymmetric_system.py  optimization.py  parameterized_operator_optimization.py  poisson_operator_optimization.py  poisson_problem.py  preconditioned_solver.py  solver_cache_benchmark.py  solver_info.py  tridiagonal_operator_optimization.py  tridiagonal_system.py
docs/: api.md  caching.md  config.md  development.md  environ.md  examples.md  index.md  install.md  mpi.md
jaxamg/: __init__.py  _amgx.cc  _amgx.pyi  _amgx_solvers.h  _amgx_utils.h  _ext.py  _version.py  amgx.py  amgx_custom_call.cc  cache.py  config.py  jaxamg.py  matrices.py  mpi_utils.py  preconditioners.py  sparsity.py  sparsity_tracing.py  utils.py
scripts/: install.sh
tests/: conftest.py  test_config.py  test_gradient.py  test_graph_coloring.py  test_jit.py  test_matrices.py  test_matrix_formats.py  test_mpi.py  test_operator.py  test_preconditioners.py  test_solve.py  test_sparsity_cache.py  test_tracing.py
